# kithon

./: .gitignore  LICENSE.txt  README.md  READMEru.md  basic_element.py  cli.py  core.py  go.mod  mkdocs.yml  pyproject.toml  tpy
Basic/: basic_element.py  blocks.py
Basic/Lib/: __init__.py  math.py
Basic/conf/: __init__.py  configurator.py  js.cc
Basic/execution_environment_api/: api.py  function_analog.py
commands/: __init__.py  configurator.py  gen.py  new.py  repl.py  run.py  watch.py
demo/: index.html
demo/src/: editor.js  tpy.js  transPYler-0.0.1-py-none-any.whl  transpyler-0.0.1-py3-none-any.whl
doc/: simple_translator.ipynb
docs/: cli.md  control-flow.md  index.md  index.rst  kithon-lang.md  overview.md  tools.md  tutorial.md
hy/: hy-1.0a4-py3-none-any.whl
kithon/: __init__.py  analogs.py  blocks.py  cli.py  commands.py  contexts.py  controls.py  core.py  expressions.py  node.py  side_effects.py  transpiler_templates.py  types.py
kithon/commands/: __init__.py  configurator.py  gen.py  repl.py  run.py  watch.py
tests/: run_tests.py  test_array.py  test_array_methods.py  test_if.py  test_loops.py  test_numbers.py  type_conversion.py  utils.py
tests/cases/: array.py  array_methods.py  class.py  empty.py  if.py  loops.py  number.py  ternary.py
tests/utils/: __init__.py  go.py  js.py  lua.py  py.py  type_conversion.py
transPYler/: __init__.py  blocks.py  config.py  core.py  expressions.py  macros.py  st_func.py  std.py  templ_utils.py  tools.py  transPYler.py  types.py  utils.py
transPYler/ast_decompiler/: __init__.py  decompiler.py
transPYler/translators/: js.py
translators/: funtion.py  test_js.py
translators/c-like/: core.tp  macros.tp
translators/go/: blocks.py  build.py  build_net.py  core.tp  expr.py  macros.py  macros.tp  utils.py
translators/go/libs/: json.tp
translators/go/objects/: list.tp  str.tp
translators/js/: __init__.py  blocks.py  blocks.tp  build.py  build.tp  classes.tp  core.tp  expr.py  expr.tp  macros.py  macros.tp  meta.tp  types.py
translators/js/libs/: dom.tp  html.tp  json.tp  math.tp  random.tp  react.tp
translators/js/objects/: list.tp  str.tp
translators/latex/: core.tp  macros.tp  math_symbols.tp
translators/latex/libs/: math.tp
translators/lua/: core.tp  macros.tp  tools.tp
translators/lua/objects/: list.tp
translators/pascal/: blocks.py  cli.py  expr.py  macros.py
translators/python/: core.tp  macros.tp  type-inference-rules.tp
translators/python/libs/: math.tp  random.tp  typing.tp
translators/python/objects/: str.tp
transpyler/: __init__.py  blocks.py  cli.py  core.py  expressions.py  node.py  side_effects.py  templ_utils.py  transpiler_templates.py  types.py  utils.py
