[tool.poetry]
name = "kithon"
readme = "README.md"
version = "0.3.0"
description = "transpiler python into other language"
authors = ["Aleksey Ploskov"]
license = "MIT"
repository = "https://github.com/alploskov/kithon"
packages = [
        { include = "kithon" },
        { include = "commands" }
]
include = [
	"translators/python/*",

	"translators/js/*",
	"translators/js/libs/*",
	"translators/js/objects/*",

	"translators/go/*",
	"translators/go/libs/*",
	"translators/go/objects/*"
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
Jinja2 = ">=2.11.2,<4.0.0"
PyYaml = ">=5.4.0"
typer = "^0.4.0"

hy = {path = "deps/hy-1.0a4-py3-none-any.whl", optional = true}
coconut = {version = "^1.6.0", optional = true}

pexpect = {version = "^4.8.0", optional = true}
ptpython = {version = "^3.0.20", optional = true}

watchdog = {version = "^2.1.7", optional = true}

packed = {path = "deps/packed-0.2.1-py3-none-any.whl", optional = true}

[tool.poetry.scripts]
kithon = "commands:kithon"

[tool.poetry.extras]
add-langs = ["coconut", "hy"]
repl = ["pexpect", "ptpython"]
watch = ["watchdog"]
pyx = ["packed"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"