[tool.poetry]
name = "kithon"
readme = "README.md"
version = "0.6.0.post1"
description = "transpiler python into other languages"
authors = ["Aleksey Ploskov"]
license = "MIT"
repository = "https://github.com/alploskov/kithon"
packages = [
        { include = "kithon" }
]
include = [
	"translators/python/*",
	"translators/python/libs/*",
	"translators/python/objects/*",
	
	"translators/js/*",
	"translators/js/libs/*",
	"translators/js/objects/*",

	"translators/go/*",
	"translators/go/libs/*",
	"translators/go/objects/*",

	"translators/lua/*",
	"translators/lua/libs/*",
	"translators/lua/objects/*",

	"translators/c-like/*.tp"
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
Jinja2 = ">=2.11.2,<4.0.0"
PyYaml = ">=5.4.0"
typer = "^0.4.0"

hy = {version = "<2.0", optional = true}
coconut = {version = "^1.6.0", optional = true}

pexpect = {version = "^4.8.0", optional = true}
ptpython = {version = "^3.0.20", optional = true}

watchdog = {version = "^2.1.7", optional = true}

packed = "^0.2"

[tool.poetry.dev-dependencies]
packed = {path = "deps/packed-0.2.1-py3-none-any.whl", optional = true}

[tool.poetry.scripts]
kithon = "kithon.commands:kithon"

[tool.poetry.extras]
add-langs = ["coconut", "hy"]
repl = ["pexpect", "ptpython"]
watch = ["watchdog"]
pyx = ["packed"]
all = [
     "packed", "watchdog",
     "coconut", "hy",
     "pexpect", "ptpython"
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = {version = ">=1.1.2,<2.0.0", optional = true}
mkdocs-material = {version = ">=8.1.4,<9.0.0", optional = true}
mdx-include = {version = ">=1.4.1,<2.0.0", optional = true}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
PyExecJS = "^1.5"
lupa = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"